# kratos_client/openapi.yaml
@@ -62,6 +62,42 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/user.v1.SendSmsReply'
+    /v1/updateMobile:
+        post:
+            tags:
+                - User
+            operationId: User_UpdateMobile
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/user.v1.UpdateMobileRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/user.v1.UpdateMobileReply'
+    /v1/updateNickName:
+        post:
+            tags:
+                - User
+            operationId: User_UpdateNickName
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/user.v1.UpdateNickNameRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/user.v1.UpdateNickNameReply'
 components:
     schemas:
         helloworld.v1.HelloReply:
@@ -98,6 +134,34 @@ components:
                 mobile:
                     type: string
                 source:
+                    type: string
+            description: The request message containing the user's name.
+        user.v1.UpdateMobileReply:
+            type: object
+            properties:
+                message:
+                    type: string
+            description: The response message containing the greetings
+        user.v1.UpdateMobileRequest:
+            type: object
+            properties:
+                mobile:
+                    type: string
+                sendSmsCode:
+                    type: string
+                newMobile:
+                    type: string
+            description: The request message containing the user's name.
+        user.v1.UpdateNickNameReply:
+            type: object
+            properties:
+                message:
+                    type: string
+            description: The response message containing the greetings
+        user.v1.UpdateNickNameRequest:
+            type: object
+            properties:
+                nickName:
                     type: string
             description: The request message containing the user's name.
 tags:
